# LionInjectable-Card

./: BUILD.md  CLICKGUI_REDESIGN_PLAN.md  README.md  build.bat
.github/workflows/: build.yml
client/: build.gradle  settings.gradle
client/src/forgeShim/java/net/minecraft/client/gui/: ScaledResolution.java
client/src/forgeShim/java/net/minecraft/client/renderer/: RenderGlobal.java
client/src/forgeShim/java/net/minecraft/entity/: EntityLivingBase.java
client/src/forgeShim/java/net/minecraftforge/client/event/: MouseEvent.java  RenderGameOverlayEvent.java  RenderWorldLastEvent.java
client/src/forgeShim/java/net/minecraftforge/common/: MinecraftForge.java
client/src/forgeShim/java/net/minecraftforge/event/entity/: EntityJoinWorldEvent.java
client/src/forgeShim/java/net/minecraftforge/fml/common/: FMLCommonHandler.java  ObfuscationReflectionHelper.java
client/src/forgeShim/java/net/minecraftforge/fml/relauncher/: ReflectionHelper.java
client/src/main/java/com/lionclient/: LionClient.java
client/src/main/java/com/lionclient/combat/: ClientRotationHelper.java
client/src/main/java/com/lionclient/combat/lag/: AbstractTimeout.java  LagDirection.java  LagHandler.java  LagRequest.java  ModuleBackedTimeout.java
client/src/main/java/com/lionclient/event/: ClientRotationEvent.java  SendPacketEvent.java
client/src/main/java/com/lionclient/feature/module/: Module.java  ModuleManager.java
client/src/main/java/com/lionclient/gui/: ClickGuiScreen.java  ModernClickGuiScreen.java
client/src/main/java/com/lionclient/input/: KeybindHandler.java
client/src/main/java/lion/client/: Agent.java  BridgeClassLoader.java  ClientLogger.java  NativeBridge.java
client/src/main/java/lion/client/agent/: Hooks.java  LionAgent.java  LionDeobfTransformer.java  LionTransformer.java  LionVanillaTransformer.java
client/src/main/java/lion/client/deobf/: LionNotchRemapper.java  NotchMapping.java
client/src/main/java/lion/client/forge/: MCAccess.java
client/src/main/java/lion/client/hook/: LauncherDetection.java
client/src/stubs/java/net/minecraft/client/: Minecraft.java
client/src/stubs/java/net/minecraft/entity/: Entity.java  EntityLivingBase.java
client/src/stubs/java/net/minecraft/util/: AxisAlignedBB.java
client/src/stubs/java/net/minecraft/world/: World.java
client/src/stubs/java/net/minecraftforge/common/: MinecraftForge.java
client/src/stubs/java/org/lwjgl/input/: Mouse.java
client/src/stubs/java/org/lwjgl/opengl/: GL11.java
injector/: CMakeLists.txt
injector/payload/src/: agent_attach.cpp  agent_attach.h  dllmain.cpp  jvm_loader.cpp  jvm_loader.h  native_bridge.cpp
injector/src/: gui.cpp  gui.h  injector.cpp  injector.h  logger.cpp  logger.h  main.cpp  process_scanner.cpp  process_scanner.h
(+46 files in other folders)
